@@ -183,7 +183,7 @@ Objects can be created by calls of the form \code{set_RLum("RLum.Analysis", ...)
 }
 
 \section{Class version}{
- 0.4.12
+ 0.4.13
 }
 
 \examples{
